client/src/index.css
@import url("https://fonts.googleapis.com/css2?family=Varela+Round&display=swap");
@import "tailwindcss";

@custom-variant dark (&:where(.dark, .dark *));

@theme {
  --color-primary: #2563eb;
  --color-primary-light: blue;
  --color-light-gray: #c1c1c1;
  --color-dark-gray: #414141;
  --color-home-gray: #f1f5f9;
  --color-very-light-primary: #a9cfff;
  --color-v-light-gray: #f3f4f6;
  --color-border-color: #dde1ee;
}

@layer base {
  * {
    font-family: "Varela Round", sans-serif;
    font-weight: 400;
    font-style: normal;
    scrollbar-width: thin;
    scrollbar-color: #787777 #1e1e1e;
  }

  .no-scrollbar {
    scrollbar-width: none;
  }
  .table-scroll
  {
    scrollbar-color: white;
    scrollbar-base-color: gray;
    scrollbar-width: 10px;
  }
  input[type="number"]::-webkit-outer-spin-button,
  input[type="number"]::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
  }

  input[type="number"] {
    -moz-appearance: textfield;
  }
}

body {
  color: #414141;
}

